# hw06-luzgool

./: Makefile  index.ipynb  pyproject.toml  setup.cfg  setup.py
_build/html/: README.html  genindex.html  hw06-description.html  index.html  search.html  searchindex.js
_build/html/_sources/: index.ipynb
_build/jupyter_execute/: index.ipynb  index.py
data/: BBH_events_v3.json
ligotools/: readligo.py  utils.py
ligotools/tests/: tests_readligo.py
