[metadata]
name = ligotools
version = 1.0.1
author = Ligo Scientific Collaboration (LSC) and Duang
description = LIGO tools package
[options]
python_requires = >=3.7, <4
install_requires = 
    matplotlib,
    numpy,   
    scipy,
    h5py,
    json,
    IPython
[options.extras_require]
test = 
    pytest
    coverage[options.package_data]
